k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-app
  labels:
    app: devsecops-api
    monitoring: prometheus
